--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -1,5 +1,29 @@
-.userIcon{
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
+.userIcon {
+  height: 38px;
+  width: 38px;
+  border-radius: 50%;
+}
+.header {
+  border-bottom: 1px solid var(--text-secondary);
+  padding: 10px 15px;
+  justify-content: flex-end !important;
+}
+.navItem {
+  font-size: 18px;
+  margin-bottom: 0;
+  margin-right: 12px;
+}
+.profileArrow {
+  flex-direction: column !important;
+  position: absolute;
+  top: 35px;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: var(--bg-secondary);
+}
+.ant-dropdown .ant-dropdown-menu {
+  background-color: var(--bg-secondary) !important;
+}
+.ant-dropdown-menu-item{
+  color: var(--text-primary) !important;
 }
