side nav items input

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --bg-quaternary:#232E3B;
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
+  --text-tertiary: #626366;
   --icon-primary:#E4E6EB;
   --icon-purple:#F3425F;
   --icon-blue:#0866FF;
