--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -9,3 +9,24 @@
   margin-left: 15px;
   margin-right: 15px;
 }
+.mainLayout{
+  display: grid;
+  grid-template-columns: 2fr 10fr;
+}
+
+
+@media only screen and (max-width: 1260px) {
+  .mainLayout{
+    grid-template-columns: 3fr 9fr;
+  }
+}
+@media only screen and (max-width: 850px) {
+  .mainLayout{
+    grid-template-columns: 4fr 8fr;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .layout-body {
+    width: 100vw !important;
+  }
+}
