--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -27,3 +27,18 @@
 .ant-dropdown-menu-item {
   color: var(--text-primary) !important;
 }
+.SmallNav{
+  display: none;
+  border-radius: 10px;
+  background-color: var(--bg-secondary);
+}
+
+
+@media only screen and (max-width: 700px) {
+  .SmallNav{
+    display: block;
+  }
+  .header{
+    display: none;
+  }
+}
