--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
 :root {
-  --bg-body: #18191A ;
+  --bg-body: #18191a;
   --bg-primary: #242526;
-  --bg-secondary:#303030;
-  --bg-tertiary:#3A3B3C;
-  --bg-quaternary:#232E3B;
+  --bg-secondary: #303030;
+  --bg-tertiary: #3a3b3c;
+  --bg-quaternary: #232e3b;
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
   --text-tertiary: #626366;
-  --icon-primary:#E4E6EB;
-  --icon-purple:#F3425F;
-  --icon-blue:#0866FF;
-  --icon-red:#E41E3F;
+  --icon-primary: #e4e6eb;
+  --icon-purple: #f3425f;
+  --icon-blue: #0866ff;
+  --icon-red: #e41e3f;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -22,8 +22,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-
-
 }
 
 a {
@@ -32,10 +30,9 @@ a {
   text-decoration: inherit;
 }
 
-
 body {
   min-width: 100vw;
-  min-height: 100dvh;
-  background-color: var(  --bg-body);
+  min-height: 100vh;
+  background-color: var(--bg-body);
   color: var(--text-primary);
 }
