--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,33 +1,52 @@
 .mainBody {
-  min-height: 100dvh;
+  min-height: 100vh;
 }
 
 .layout-body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  margin-left: 15px;
-  margin-right: 15px;
+  /* margin-left: 15px;
+  margin-right: 15px; */
+  padding: 0 20px;
 }
-.mainLayout{
+.mainLayout {
   display: grid;
   grid-template-columns: 2fr 10fr;
   gap: 0;
 }
+.footer {
+  margin-top: auto;
+}
+.sideHeaderLayout {
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
+.sideHeaderLayout::-webkit-scrollbar-track{
+  background-color: transparent !important;
+}
 
 @media only screen and (max-width: 1260px) {
-  .mainLayout{
+  .mainLayout {
     grid-template-columns: 3fr 9fr;
   }
 }
 @media only screen and (max-width: 850px) {
-  .mainLayout{
+  .mainLayout {
     grid-template-columns: 4fr 8fr;
   }
 }
 @media only screen and (max-width: 700px) {
   .layout-body {
     width: 100vw !important;
+  }
+  .footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: block !important;
   }
 }
