--- a/src/pages/non-shared/Footer/Footer.css
+++ b/src/pages/non-shared/Footer/Footer.css
@@ -3,7 +3,7 @@
 }
 
 .homeIcon {
-  font-size: 40px;
+  font-size: 35px;
 }
 .homeIconParent {
   background-color: var(--bg-tertiary);
@@ -15,6 +15,9 @@
   align-items: center;
   justify-content: center;
 }
+.footerIcon{
+  font-size: 25px;
+}
 
 @media only screen and (max-width: 700px) {
   .footerSm {
@@ -22,11 +25,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px 10px;
-    margin-right: 20px;
-    border-radius: 10px;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
     background-color: var(--bg-secondary);
   }
-  .footer{
+  .footerMd{
     display: none;
   }
 }
