--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --bg-secondary: #303030;
   --bg-tertiary: #3a3b3c;
   --bg-quaternary: #232e3b;
+  --bg-member: #202122;
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
   --text-tertiary: #626366;
