--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -4,15 +4,15 @@
 
 .layout-body {
   display: flex;
-  min-height: 100vh;
+  height: 100vh;
   flex-direction: column;
-  /* margin-left: 15px;
-  margin-right: 15px; */
+  overflow-y: scroll;
+  overflow-x: hidden;
   padding: 0 20px;
 }
 .mainLayout {
   display: grid;
-  grid-template-columns: 2fr 10fr;
+  grid-template-columns: 240px 1fr;
   gap: 0;
 }
 .footer {
@@ -24,23 +24,18 @@
   overflow-x: hidden;
 }
 
-.sideHeaderLayout::-webkit-scrollbar-track{
+.sideHeaderLayout::-webkit-scrollbar-track {
   background-color: transparent !important;
 }
 
-@media only screen and (max-width: 1260px) {
-  .mainLayout {
-    grid-template-columns: 3fr 9fr;
-  }
-}
-@media only screen and (max-width: 850px) {
-  .mainLayout {
-    grid-template-columns: 4fr 8fr;
-  }
-}
 @media only screen and (max-width: 700px) {
   .layout-body {
     width: 100vw !important;
+    padding:0  10px;
+    padding-bottom:  70px;
+  }
+  .mainLayout {
+    grid-template-columns: 0px 1fr;
   }
   .footer {
     position: fixed;
