--- a/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
+++ b/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
@@ -1,5 +1,18 @@
 .member{
     border: 1px solid var(--text-tertiary);
     border-radius: 5px;
-    padding:  5px 15px;
+    padding:  10px;
+    background-color: var(--bg-member);
 }
+
+
+@media only screen and (max-width: 700px) {
+    .member{
+        border: 1px solid var(--text-tertiary);
+        border-radius: 5px;
+        padding:  10px;
+    }
+    .member > .d-gridTwo{
+        font-size: 14px;
+    }
+  }
