--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --bg-tertiary: #3a3b3c;
   --bg-quaternary: #232e3b;
   --bg-member: #202122;
+  --bg-personalDashboard: #202122;
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
   --text-tertiary: #626366;
