--- a/src/pages/shared/SideHeader/SideHeader.css
+++ b/src/pages/shared/SideHeader/SideHeader.css
@@ -36,11 +36,13 @@
   font-size: 17px;
   font-weight: 300;
 }
+
 .sideNavMainItem {
   padding-left: 7px;
   border-radius: 5px;
   display: flex;
   align-items: center;
+  /* justify-content: space-between; */
 }
 .sideNavItems a:hover {
   background-color: var(--bg-quaternary);
