--- a/src/pages/non-shared/Home/Home.css
+++ b/src/pages/non-shared/Home/Home.css
@@ -18,6 +18,11 @@
     background-color:var(--text-tertiary);
     margin: 5px;
   }
+  .overview{
+    background-color: var(--bg-personalDashboard);
+    margin-bottom: 12px;
+    border-radius: 8px;
+  }
 
   @media only screen and (max-width: 700px) {
     .divider {
