--- a/src/pages/non-shared/Login/Login.css
+++ b/src/pages/non-shared/Login/Login.css
@@ -38,7 +38,7 @@ font-size: 22px;
 .userForm{
     min-height: 100vh;
 }
-.ant-input-affix-wrapper{
+/* .ant-input-affix-wrapper{
     background-color: transparent !important;
 }
 .ant-input{
@@ -56,7 +56,7 @@ font-size: 22px;
 }
 .ant-checkbox-wrapper{
     color: var(--text-primary) !important;
-}
+} */
 
 @media only screen and (max-width: 700px) {
   .welcomeMsg{
