--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
   --text-tertiary: #626366;
+  --border-tertiary: #565963;
   --icon-primary: #e4e6eb;
   --icon-purple: #f3425f;
   --icon-blue: #0866ff;
