--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -31,8 +31,8 @@
 @media only screen and (max-width: 700px) {
   .layout-body {
     width: 100vw !important;
-    padding:0  10px;
-    padding-bottom:  70px;
+    padding:0;
+    /* padding-bottom:  70px; */
   }
   .mainLayout {
     grid-template-columns: 0px 1fr;
