--- a/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
+++ b/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
@@ -1,9 +1,13 @@
 .phoneItem{
-    background-color: #080C29;
+    background-color: #11121d;
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 15px;
     padding: 5px 15px;
     border-radius: 10px;
+}
+.phoneBtn{
+    background-color: #fee21f;
+    color: var();
 }
