--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
   --bg-secondary: #303030;
   --bg-tertiary: #3a3b3c;
   --bg-quaternary: #232e3b;
+  /* --bg-app-primary: #434343; */
+  --bg-app-primary: #060811;
   --bg-member: #202122;
   --bg-personalDashboard: #202122;
   --text-primary: #e4e6eb;
