--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -28,15 +28,19 @@
   background-color: transparent !important;
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 992px) {
   .layout-body {
     width: 100vw !important;
-    padding:0;
-    /* padding-bottom:  70px; */
+    padding: 0;
   }
   .mainLayout {
     grid-template-columns: 0px 1fr;
   }
+  
+}
+
+@media only screen and (max-width: 576px) {
+ 
   .footer {
     position: fixed;
     bottom: 0;
