--- a/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
+++ b/src/pages/non-shared/PhoneBook/components/PhoneEach/PhoneEach.css
@@ -1,13 +1,62 @@
-.phoneItem{
-    background-color: #11121d;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 15px;
-    padding: 5px 15px;
-    border-radius: 10px;
+.phoneItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: var(--bg-primary);
 }
-.phoneBtn{
-    background-color: #fee21f;
-    color: var();
+.phoneBtn {
+  background-color: #fee21f;
+  color: var();
+}
+.phoneItemLeft {
+  display: flex;
+  align-items: center;
+}
+.phoneItemPhoto {
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+.iconSize {
+  width: 35px;
+}
+.phoneText {
+  font-size: 18px;
+}
+.phoneNameText{
+    font-size: 20px;
+}
+.phoneIconsGroup {
+    margin-top: 8px;
+    margin-right: 10px;
+  }
+
+@media only screen and (max-width: 576px) {
+  .phoneItem {
+    background-color: #11121d;
+  }
+  .phoneNameText{
+    font-size: 20px;
+}
+  .phoneText {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .phoneText {
+    font-size: 15px;
+  }
+  .phoneNameText{
+    font-size: 16px;
+}
+.iconSize {
+    width: 30px;
+  }
+  .phoneItemPhoto {
+    margin-right: 7px;
+  }
 }
