--- a/src/pages/non-shared/PhoneBook/PhoneBook.css
+++ b/src/pages/non-shared/PhoneBook/PhoneBook.css
@@ -21,7 +21,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 25px 0px 20px;
 }
 .componentAddIconSection {
   padding: 5px 15px;
@@ -53,12 +52,15 @@
 
 @media screen and (min-device-width: 576px) and (max-device-width: 992px) { 
   .phonebookSection{
-    margin: 0 15px;
+    margin: 0 20px;
   }
 }
 
 
 @media only screen and (max-width: 576px) {
+  .componentAddSection {
+    padding: 30px 25px 0px 20px;
+  }
   .phoneBookContainer {
     display: block;
   }
