--- a/src/pages/non-shared/PhoneBook/PhoneBook.css
+++ b/src/pages/non-shared/PhoneBook/PhoneBook.css
@@ -48,11 +48,14 @@
 .phoneBookContainerItemBg {
   background-color: var(--bg-body);
 }
+.phonebookSection{
+  margin: 0 0px;
+}
 
 
 @media screen and (min-device-width: 576px) and (max-device-width: 992px) { 
   .phonebookSection{
-    margin: 0 20px;
+    margin: 0 15px;
   }
 }
 
