--- a/src/pages/non-shared/Birthdays/BirthdayEach/BirthdayEach.css
+++ b/src/pages/non-shared/Birthdays/BirthdayEach/BirthdayEach.css
@@ -1,6 +1,5 @@
 .birthdayText{
-    display: flex;
-    align-items: center;
+    text-align: center;
     background-color: #fee21f;
     padding: 5px ;
     color: var(--bg-body);
