--- a/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
+++ b/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
@@ -14,7 +14,7 @@
 }
 .memberProfileCenter {
   background-color: var(--bg-primary);
-  padding: 43px 30px;
+  padding:  30px;
   border-radius: 10px;
 }
 .memberProfileImage {
@@ -52,6 +52,11 @@
   border-bottom: 1px solid var(--text-secondary);
   margin-bottom: 15px;
 }
+.profileHeaderNotice{
+  border-bottom: 1px solid var(--text-secondary);
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+}
 
 @media screen and (min-device-width: 576px) and (max-device-width: 740px) {
   .profileManageCenter {
@@ -71,7 +76,24 @@
   }
 }
 @media screen and (max-device-width: 576px) {
+  .memberProfileImage {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+  }
   .singleMemberSection {
     display: none;
+  }
+  .memberProfileName {
+    font-size: 20px;
+  }
+  .memberProfileManageItemText {
+    font-size: 15px;
+  }
+  .memberProfileHeader {
+    font-size: 20px;
+  }
+  .memberProfileMonthNane{
+    font-size: 20px !important;
   }
 }
