--- a/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
+++ b/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
@@ -1,4 +1,48 @@
 .mealDatePicker > .ant-picker {
   min-height: 45px;
-  background-color: gold !important;
+  background-color: #4fba6f !important;
+
+}
+
+.mealDatePicker > .ant-picker .ant-picker-input > input {
+  font-size: 20px !important;
+  text-align: center !important;
+  color: var(--bg-body) !important;
+  font-weight: 500;
+}
+.mealDatePicker > .ant-picker .ant-picker-suffix {
+  color: var(--bg-body) !important;
+  font-weight: 500;
+  font-size: 20px !important;
+}
+.mealDatePicker > .ant-picker .ant-picker-clear {
+  background-color: #4fba6f !important;
+  color: var(--bg-body) !important;
+  font-weight: 500;
+  font-size: 20px !important;
+}
+.addMealCostSection {
+  border: 1px solid var(--text-tertiary);
+  margin-top: 30px;
+  padding: 20px;
+  border-radius: 10px;
+}
+.ant-select-selector {
+  height: 50px !important;
+}
+.ant-select-multiple .ant-select-selection-item {
+  height: 100%;
+}
+.ant-select-multiple .ant-select-selection-placeholder {
+  font-size: 18px;
+}
+.ant-select .ant-select-arrow {
+  font-size: 18px;
+}
+.ant-input {
+  min-height: 45px;
+  font-size: 18px;
+}
+.addMealItemMargin{
+  margin-top: -20px;
 }
