--- a/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
+++ b/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
@@ -1,5 +1,6 @@
 .mealDatePicker > .ant-picker {
   min-height: 45px;
+  border-radius: 15px;
   background-color: #4fba6f !important;
 }
 
@@ -21,11 +22,19 @@
   font-size: 20px !important;
 }
 .addMealCostSection {
-  border: 1px solid var(--text-tertiary);
-  background-color: var(--bg-primary);
+  /* border: 1px solid var(--text-tertiary);
+  background-color: var(--bg-primary); */
+  border-radius: 24px;
+  width: 100%;
   margin-top: 30px;
+  margin-bottom: 30px;
   padding: 20px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
+}
+
+.sectionShadow {
+  background: linear-gradient(145deg, #161717, #1a1b1c);
+  box-shadow: 5px 5px 9px #141516, -5px -5px 9px #1c1d1e;
 }
 .ant-select-selector {
   height: 45px !important;
@@ -46,8 +55,15 @@
 .addMealItemMargin {
   margin-top: -20px;
 }
-.ant-input{
+.ant-input {
   min-height: 45px !important;
+}
+.addMealCostSectionMain {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 80vh;
 }
 
 @media only screen and (max-width: 576px) {
@@ -67,7 +83,7 @@
     padding: 10px;
   }
   .mealDatePicker > .ant-picker {
-    min-height: 35px;
+    min-height: 35px !important;
   }
 
   .mealDatePicker > .ant-picker .ant-picker-input > input {
@@ -93,9 +109,9 @@
     font-size: 18px !important;
   }
   .addMealItemMargin {
-    margin-top: -20px;
+    margin-top: -20px !important;
   }
-  .ant-input{
+  .ant-input {
     min-height: 35px !important;
   }
 }
