--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -19,3 +19,9 @@
   background: var(--bg-primary);
   border-radius: 10px;
 } */
+
+@media only screen and (max-width: 576px) {
+  .activeMonthSectionMain {
+    display: none;
+  }
+}
