--- a/src/pages/shared/Header/Header.css
+++ b/src/pages/shared/Header/Header.css
@@ -9,6 +9,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  background-color: var(--bg-body);
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 .navItem {
   font-size: 18px;
