--- a/src/pages/non-shared/Home/Home.css
+++ b/src/pages/non-shared/Home/Home.css
@@ -1,25 +1,32 @@
-.d-gridTwo{
-    display: grid;
-    grid-template-columns: 7fr 5fr;
-    align-items: center;
+.d-gridTwo {
+  display: grid;
+  grid-template-columns: 7fr 5fr;
+  align-items: center;
 }
 
 .divider {
-    font-size: 22px;
-    width: 100%;
-    display: flex;
-    align-items: center;
+  font-size: 22px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.divider::before,
+.divider::after {
+  flex: 1;
+  content: "";
+  padding: 0.5px;
+  background-color: var(--text-tertiary);
+  margin: 5px;
+}
+.overview {
+  background-color: var(--bg-personalDashboard);
+  margin-bottom: 12px;
+  border-radius: 8px;
+}
+
+@media screen and (max-device-width: 992px) {
+  .home-container {
+    padding: 0 12px;
   }
-  
-  .divider::before, .divider::after {
-    flex: 1;
-    content: '';
-    padding: 0.5px;
-    background-color:var(--text-tertiary);
-    margin: 5px;
-  }
-  .overview{
-    background-color: var(--bg-personalDashboard);
-    margin-bottom: 12px;
-    border-radius: 8px;
-  }
+}
