multiple select fixed

--- a/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
+++ b/src/pages/non-shared/ManageMessCost/AddMessCost/AddMealCost/AddMealCost.css
@@ -37,7 +37,7 @@
   box-shadow: 5px 5px 9px #141516, -5px -5px 9px #1c1d1e;
 }
 .ant-select-selector {
-  height: 45px !important;
+  min-height: 45px !important;
 }
 .ant-select-multiple .ant-select-selection-item {
   height: 100%;
@@ -66,10 +66,10 @@
   min-height: 80vh;
 }
 .react-datepicker__input-container {
- display: flex !important;
- align-items: center !important;
+  display: flex !important;
+  align-items: center !important;
 }
-.react-datepicker__input-container .react-datepicker__calendar-icon{
+.react-datepicker__input-container .react-datepicker__calendar-icon {
   min-height: 25px;
   width: 25px;
   margin-left: 5px;
@@ -89,25 +89,33 @@
 .react-datepicker-wrapper {
   width: 100%;
 }
-.react-datepicker__header{
+.react-datepicker__header {
   background-color: var(--bg-primary) !important;
   color: var(--text-primary) !important;
 }
-.react-datepicker__day-name, .react-datepicker__day, .react-datepicker__time-name{
+.react-datepicker__day-name,
+.react-datepicker__day,
+.react-datepicker__time-name {
   color: var(--text-primary) !important;
 }
-.react-datepicker__current-month{
+.react-datepicker__current-month {
   color: var(--text-primary) !important;
 }
-.react-datepicker__day:hover, .react-datepicker__month-text:hover, .react-datepicker__quarter-text:hover, .react-datepicker__year-text:hover{
+.react-datepicker__day:hover,
+.react-datepicker__month-text:hover,
+.react-datepicker__quarter-text:hover,
+.react-datepicker__year-text:hover {
   background-color: var(--bg-secondary) !important;
 }
-.react-datepicker{
+.react-datepicker {
   background-color: var(--bg-tertiary) !important;
   color: var(--text-primary) !important;
   border: none !important;
 }
-.react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected {
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
   background-color: transparent !important;
 }
 @media only screen and (max-width: 576px) {
