--- a/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
+++ b/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
@@ -14,7 +14,7 @@
 }
 .memberProfileCenter {
   background-color: var(--bg-primary);
-  padding:  30px;
+  padding: 30px;
   border-radius: 10px;
 }
 .memberProfileImage {
@@ -52,12 +52,14 @@
   border-bottom: 1px solid var(--text-secondary);
   margin-bottom: 15px;
 }
-.profileHeaderNotice{
+.profileHeaderNotice {
   border-bottom: 1px solid var(--text-secondary);
   padding-bottom: 10px;
   margin-bottom: 15px;
 }
-
+.d-gridTwo > div > p {
+  font-size: 16.5px;
+}
 @media screen and (min-device-width: 576px) and (max-device-width: 740px) {
   .profileManageCenter {
     padding: 20px 15px;
@@ -93,7 +95,7 @@
   .memberProfileHeader {
     font-size: 20px;
   }
-  .memberProfileMonthNane{
+  .memberProfileMonthNane {
     font-size: 20px !important;
   }
 }
