single user remove

--- a/src/index.css
+++ b/src/index.css
@@ -16,13 +16,14 @@
   --icon-purple: #f3425f;
   --icon-blue: #0866ff;
   --icon-red: #e41e3f;
+}
+
+* {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   margin: 0;
   padding: 0;
-
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
