--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/components/ActiveDetailsTemplate/ActiveDetailsTemplate.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/components/ActiveDetailsTemplate/ActiveDetailsTemplate.css
@@ -1,14 +1,14 @@
-.activeDetailsTemplate{
-    background-color: var(--bg-primary);
-    padding: 10px;
-    border-radius: 10px;
+.activeDetailsTemplate {
+  background-color: var(--bg-primary);
+  padding: 10px;
+  border-radius: 10px;
 }
-.dateLogo{
-    background-color: #3bb54a;
+.dateLogo {
+  background-color: #3bb54a;
   color: var(--bg-body);
   margin-bottom: 0;
-  padding: 7px;
-  border: 2px solid var(--bg-body);
+  height: 45px;
+  width: 45px;
   border-radius: 50px;
   margin-right: 15px;
 }
