--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -32,3 +32,9 @@
     display: none;
   }
 }
+
+.pagination-item li {
+  height: auto !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+}
