active month detils sm device

--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -31,6 +31,9 @@
   .activeMonthSectionMain {
     display: none;
   }
+  .activeMonthLg {
+    display: none !important;
+  }
 }
 
 .pagination-item li {
