--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
   --bg-personalDashboard: #202122;
   --text-primary: #e4e6eb;
   --text-secondary: #b0b3b8;
-  --text-tertiary: #626366;
+  --text-tertiary: #62636652;
+  /* --text-tertiary: #626366; */
   --border-tertiary: #565963;
   --icon-primary: #e4e6eb;
   --icon-purple: #f3425f;
