--- a/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
+++ b/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
@@ -1,6 +1,6 @@
 
 .member{
-    border: 1px solid var(--text-tertiary);
+    /* border: 1px solid var(--text-tertiary); */
     border-radius: 5px;
     padding:  10px;
     background-color: var(--bg-member);
@@ -10,7 +10,7 @@
 
 @media only screen and (max-width: 700px) {
     .member{
-        border: 1px solid var(--text-tertiary);
+        /* border: 1px solid var(--text-tertiary); */
         border-radius: 5px;
         padding:  10px;
     }
