--- a/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
+++ b/src/pages/non-shared/ManageMembers/SingleMember/SingleMember.css
@@ -30,12 +30,12 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  border-bottom: 1px solid var(--text-secondary);
+  border-bottom: 1px solid var(--text-tertiary);
   margin-bottom: 15px;
 }
 .memberProfileHeader {
   text-align: center;
-  border-bottom: 1px solid var(--text-secondary);
+  border-bottom: 1px solid var(--text-tertiary);
   padding-bottom: 15px;
 }
 .memberProfileManageItemText {
@@ -49,11 +49,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid var(--text-secondary);
+  border-bottom: 1px solid var(--text-tertiary);
   margin-bottom: 15px;
 }
 .profileHeaderNotice {
-  border-bottom: 1px solid var(--text-secondary);
+  border-bottom: 1px solid var(--text-tertiary);
   padding-bottom: 10px;
   margin-bottom: 15px;
 }
