--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -27,17 +27,30 @@
   border-radius: 10px;
 } */
 
-@media only screen and (max-width: 576px) {
-  .activeMonthSectionMain {
-    display: none;
-  }
-  .activeMonthLg {
-    display: none !important;
-  }
-}
-
 .pagination-item li {
   height: auto !important;
   padding-top: 5px !important;
   padding-bottom: 5px !important;
+}
+
+.active-month-sm {
+  display: none;
+}
+.phoneBookContainerItemBg {
+  display: none;
+}
+
+@media only screen and (max-width: 576px) {
+  .activeMonthSectionMain {
+    display: none;
+  }
+  .active-month-sm {
+    display: block;
+  }
+  .activeMonthLg {
+    display: none !important;
+  }
+  .phoneBookContainerItemBg {
+    display: block;
+  }
 }
