--- a/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
+++ b/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
@@ -1,20 +1,19 @@
-
-.member{
-    /* border: 1px solid var(--text-tertiary); */
-    border-radius: 5px;
-    padding:  10px;
-    background-color: var(--bg-member);
-    font-weight: 300;
+.member {
+  /* border: 1px solid var(--text-tertiary); */
+  border-radius: 5px;
+  padding: 10px;
+  background-color: var(--bg-personalDashboard);
+  font-weight: 300;
+  box-shadow: var(--card-shadow);
 }
 
-
 @media only screen and (max-width: 700px) {
-    .member{
-        /* border: 1px solid var(--text-tertiary); */
-        border-radius: 5px;
-        padding:  10px;
-    }
-    .member > .d-gridTwo{
-        font-size: 14px;
-    }
+  .member {
+    /* border: 1px solid var(--text-tertiary); */
+    border-radius: 5px;
+    padding: 10px;
   }
+  .member > .d-gridTwo {
+    font-size: 14px;
+  }
+}
