--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/ActiveMonthDetails.css
@@ -7,7 +7,7 @@
   margin: 0 30px;
 }
 .activeNav {
-  background-color: #3bb54a;
+  background-color: #5d83ac;
   color: var(--bg-body);
   font-weight: 700;
 }
