--- a/src/pages/non-shared/ManageMonths/ActiveMonthDetails/components/ActiveDetailsTemplate/ActiveDetailsTemplate.css
+++ b/src/pages/non-shared/ManageMonths/ActiveMonthDetails/components/ActiveDetailsTemplate/ActiveDetailsTemplate.css
@@ -4,7 +4,7 @@
   border-radius: 10px;
 }
 .dateLogo {
-  background-color: #3bb54a;
+  background-color: #5d83ac;
   color: var(--bg-body);
   margin-bottom: 0;
   height: 45px;
