--- a/src/pages/non-shared/Notification/NotificationModal/NotificationModal.css
+++ b/src/pages/non-shared/Notification/NotificationModal/NotificationModal.css
@@ -23,7 +23,7 @@
 }
 
 .dateImgNotification {
-  background-color: #3bb54a;
+  background-color: #5d83ac;
   color: var(--bg-body);
   margin-bottom: 0;
   min-width: 40px;
