--- a/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
+++ b/src/pages/non-shared/Home/components/AllMembers/AllMembers.css
@@ -6,6 +6,9 @@
   font-weight: 300;
   box-shadow: var(--card-shadow);
 }
+.member.me {
+  background: linear-gradient(90deg, #2d587e, #519ada);
+}
 
 @media only screen and (max-width: 700px) {
   .member {
