--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 :root {
   --bg-body: #11151c;
   --bg-primary: #242526;
-  --bg-secondary: #303030;
+  --bg-secondary: #91b3ff26;
   --bg-tertiary: #3a3b3c;
   --bg-quaternary: #232e3b;
   /* --bg-app-primary: #434343; */
